fix: change menu items spacing

--- a/tp2/components/navbar/navbar.css
+++ b/tp2/components/navbar/navbar.css
@@ -1,8 +1,7 @@
 .navbar {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
+  padding: 10px 40px;
   background-color: #50496d;
   color: white;
   min-height: 60px;
@@ -13,13 +12,26 @@
   font-size: 24px;
 }
 
+.logo {
+  margin-left: 10%;
+}
+
 .logo img {
   height: 60px;
 }
 
 .search-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
   position: relative;
-  width: 450px;
+  width: 100%;
+}
+
+.search-wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 450px;
 }
 
 .search-container input {
@@ -34,15 +46,15 @@
 .search-btn {
   position: absolute;
   top: 50%;
-  right: 10px;
+  left: 85%;
   transform: translateY(-50%);
   border: none;
   background: transparent;
   color: #333;
   cursor: pointer;
   font-size: 18px;
+  padding: 0;
 }
-
 .icons {
   display: flex;
   gap: 15px;
